@@ -1,36 +1,34 @@
 package com.doogoo.doogoo.academic.application;
 
 import com.doogoo.doogoo.academic.api.dto.AcademicNoticesResponse;
-import com.doogoo.doogoo.academic.domain.AcademicNotice;
-import com.doogoo.doogoo.academic.infrastructure.AcademicNoticeRepository;
+import com.doogoo.doogoo.academic.domain.AcademicSchedule;
+import com.doogoo.doogoo.academic.infrastructure.AcademicScheduleRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 
 @Service
 public class AcademicNoticeQueryService {
 
-    private final AcademicNoticeRepository academicNoticeRepository;
+    private final AcademicScheduleRepository academicScheduleRepository;
 
-    public AcademicNoticeQueryService(AcademicNoticeRepository academicNoticeRepository) {
-        this.academicNoticeRepository = academicNoticeRepository;
+    public AcademicNoticeQueryService(AcademicScheduleRepository academicScheduleRepository) {
+        this.academicScheduleRepository = academicScheduleRepository;
     }
 
     public AcademicNoticesResponse getNotices() {
-        List<AcademicNoticesResponse.NoticeItem> items = academicNoticeRepository.findAll().stream()
+        List<AcademicNoticesResponse.NoticeItem> items = academicScheduleRepository.findAll().stream()
                 .map(this::toItem)
-                .collect(Collectors.toList());
+                .toList();
         return new AcademicNoticesResponse(items);
     }
 
-    private AcademicNoticesResponse.NoticeItem toItem(AcademicNotice n) {
-        String gradeId = n.getGrade() != null ? n.getGrade().id() : null;
+    private AcademicNoticesResponse.NoticeItem toItem(AcademicSchedule n) {
         return new AcademicNoticesResponse.NoticeItem(
-                n.getNoticeId(),
-                n.getTitle(),
-                gradeId,
-                n.getStartAt(),
-                n.getEndAt()
+                String.valueOf(n.getId()),
+                n.getContent(),
+                n.getStartDate().atStartOfDay(),
+                n.getEndDate().atTime(23, 59),
+                n.getGradeId()
         );
     }
 }
